2006.02.07
----------
- include the example xsl files in the distribution
- add .pdf to formatter output filename so file associations work on windows

2006.02.06
----------
- fixes for building a py2exe executable using pygtk >= 2.8.4
- make sure we check for pysqlite even if SQLObject says sqlite is not supported


2006.02.03
----------
- fixed removing existing data in a row which also means you can now set None
to a row
- fixed a problem where we were corrupting $PATH


2006.02.02
----------
- some usability work on the connection manager and minor fixes
- the prefs config directory is now only created when bauble is run, not just
when it's packages are imported, like when run from setup.py
- small try..except changes to the utils dialogs


2006.01.25
----------
- fixed a problem are trying to commit the values in an editor if there had
been a previous exception trying to commit
- the offending row is now highlighted when there is a problem trying to 
commit the values in an editor
- added editor.CommitException to wrap the exception throws from the database
on commit, also allows us to pass the model row used when trying to commit


2006.01.23
----------
- changed TreeViewEditorDialog._commit_model_row to _commit_model_rows


2006.01.19
----------
- make the default sort order more reasonable for accessions, plants, families,
genera, and species
- removed sorting of results in the search view since tables should now
specify their own sort order


2006.01.16
----------
- a clicking on the "Search" button in the search view now turns off the 
current infobox
- the ConnectionManager and its password dialog now ask to be centered on 
the screen
- fixed problem with editing an Accession's Donation if the donations already 
exists
- fixed some problems with the Accession Infobox
- fixes for the message dialog in utils if they are opened before the gui
starts


2006.01.16
----------
- properly escape Species.sp_author and Species.