@@ -1,23 +1,32 @@
 #
-# an output debugger
+# logger/debugger for Bauble
 #
+import os, sys, logging
+import bauble
 
+if bauble.main_is_frozen():
+    import bauble.paths as paths    
+    filename = os.path.join(paths.user_dir(), 'bauble.log')
+    debug_handler = logging.FileHandler(filename)    
+    logging_config = {'level': logging.DEBUG, 
+                      'format': '%(message)s',
+                      'filename': filename}
+else:
+    debug_handler = logging.StreamHandler()
+    logging_config = {'level': logging.DEBUG, 
+                      'format': '%(message)s',
+                      'stream': sys.stderr}
+                     
+logging.basicConfig(**logging_config)
 
-import sys, logging
-import logging
+# add the custom handler for the debug logger
+debug_handler.setLevel(logging.DEBUG)
+debug_formatter = logging.Formatter('%(filename)s(%(lineno)d): %(message)s')
+debug_handler.setFormatter(debug_formatter)
+logging.getLogger('').addHandler(debug_handler)
+
+# alias for debug
+debug = logging.debug
 
 # alias for logging, just b/c its three less letters
 log = logging
-
-logging.basicConfig(level=logging.INFO, format='%(message)s')
-
-# debugging convenience
-handler = logging.StreamHandler()
-handler.setLevel(logging.DEBUG)
-formatter = logging.Formatter('%(filename)s(%(lineno)d): %(message)s')
-handler.setFormatter(formatter)
-_debug = logging.getLogger('debugger')
-_debug.propagate = False
-_debug.addHandler(handler)
-_debug.setLevel(logging.DEBUG)
-debug = _debug.debug
